src/components/main-page-content/charity-banner/CharityBanner.module.scss
.wraper {
  margin: 50px auto 10px auto;
  width: 100%;
  max-width: 1920px;
  height: 50vh;
  max-height: 700px;
  background: url("../../../images/img2.jpg") top no-repeat;
  background-size: cover;


  .gradient_filler {
    background: linear-gradient(to top, rgba(21, 36, 66, 1) 0%, transparent 60%);
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    box-shadow: inset 0px 0px 200px #000;

    .typing {
      width: 534px;
      max-height: 100%;
      padding: 5%;
      overflow: hidden;

      p {
        text-align: center;
        font-family: Roboto, sans-serif;
        font-weight: 700;
        font-size: 30px;
        line-height: 40px;
        text-shadow: 3px 3px #000;
        color: white;
      }

    }
  }
}

@media (min-width:568px) {
  .typing p {
    font-size: 40px;
    line-height: 50px;
  }
}

@media (min-width: 992px) {
  .wraper {
    height: 75vh;

    .gradient_filler {
      .typing {
        padding: 2.5%;

        p {
          font-size: 50px;
          line-height: 60px;
        }
      }
    }
  }

}

